--- a/html/add_task.html
+++ b/html/add_task.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../fonts.css">
     <script src="../js/template.js"></script>
     <script src="../js/add_task.js"></script>
+    <script src="../js/add_task_template.js"></script>
 </head>
 
 <body onload="includeHTML(); init()">
@@ -26,10 +27,12 @@
                 <label for="input-description">Description</label>
                 <textarea name="input-description" id="input-description" placeholder="Enter a Description"></textarea>
                 <label for="input-assigny">Assigned to</label>
-                <input list="input-assigned" id="input-assigny" class="dropbtn" onclick="showContacts()"
+                <input list="input-assigned" id="input-assigny" class="dropbtn" onclick="ifIsListContactsLoaded()"
                     placeholder="Select contacts to assign">
+                    <datalist></datalist>
                 <div id="show-contacts">
                 </div>
+                <div id="display-initials"></div>
             </div>
 
             <div class="seperator"></div>
