--- a/html/board.html
+++ b/html/board.html
@@ -24,7 +24,7 @@
                       <div class="boxSearch">
                         <div class="vektorSearch"></div>
                         <div class="widthSearch">
-                                <img class="buttonSearch"  src="../assets/img/search.png" alt="">
+                                <img class="buttonSearch"  src="../assets/img/search.png" alt="" onclick="foundTask()">
                         </div>
                       </div>
                     </form>
