--- a/html/signup.html
+++ b/html/signup.html
@@ -30,6 +30,7 @@
               align-items: center;
               gap: 32px;
             "
+            onsubmit="signup(); return false"
           >
             <div class="emailContainer">
               <input
@@ -89,7 +90,6 @@
                 id="signupValidationLockIcon"
               />
             </div>
-          </form>
           <div id="errorMessage" class="errorMessageSignup">
             Ups! Your password does not match.
           </div>
@@ -104,9 +104,10 @@
           >
         </div>
       </div>
-      <button type="button" id="signupButton" onclick="signup()">
+      <button type="submit" id="signupButton">
         Sign up
       </button>
+    </form>
     </div>
     <div class="legalButtonsContainer">
       <button class="legalButtonLeft" onclick="redirectToPrivacyPage()">
