delete error index

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -155,7 +155,7 @@
         <div
           id="contactsFullscreen"
           class="contactsFullscreen"
-          onclick="showContactDetails(index)"
+          onclick="showContactDetails()"
         ></div>
       </div>
 
