start css summary

--- a/html/summary.html
+++ b/html/summary.html
@@ -9,8 +9,36 @@
     <link rel="stylesheet" href="../assets/templates/templates.css">
     <link rel="stylesheet" href="../fonts.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/summary.css">
 </head>
 <body onload="init()">
     <div w3-include-html="../../assets/templates/desktop_template.html"></div>
+    <div id="titleSummary">
+        <p class="summaryTitle">Join 360</p>
+        <div class="summaryTitleVektor"></div>
+        <p class="summaryTitleText">Key Matrix at a Glance</p>
+    </div>
+    <div class="summaryText">
+        <div id="infosSummary">
+            <div class="toDoDone">
+                <div class="summaryToDO">1</div>
+                <div class="summaryToDO">1</div>
+            </div>
+            <div class="timeLine"></div>
+            <div class="summaryTasks">
+                <div class="summarySeparateTasks">
+                    <p class="summaryNumber">5</p>
+                    <p class="summaryTaskText">Tasks in Board</p>
+                </div>
+                <div class="summarySeparateTasks"></div>
+                <div class="summarySeparateTasks"></div>
+            </div>
+        </div>
+        <div id="textRegards">
+            <p class="regardsTime">Good Morning,</p>
+            <p class="regardsName">Sophia Müller</p>
+        </div>
+    </div>
+    
 </body>
 </html>
