--- a/html/contacts.html
+++ b/html/contacts.html
@@ -250,7 +250,7 @@
             <img src="../assets/img/contact_add.svg" alt="Person" />
           </button>
         </div>
-        <div class="contactList" id="contactList">Hallo</div>
+        <div class="contactList" id="contactList"></div>
       </div>
 
       <div class="headlinesContainer">
