add transition / add firebask for subtask

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -69,12 +69,12 @@
             <span>*This field is required</span>
             <span>
                 <button class="btn-footer-clear" onclick="clearInputs()">Clear</button>
-                <button class="btn-footer-create"  onclick="addTask()">Create Task</button>
+                <button class="btn-footer-create" onclick="addTask()">Create Task</button>
             </span>
         </div>
     </div>
     <div class="pop-up-task d-none" id="add_task">
-        <div class="overlay-create-task">
+        <div class="overlay-create-task" id="overlay-task">
             <p>Task added to Board</p><img src="../assets/img/imgBoard.png">
         </div>
     </div>
