--- a/html/add_task.html
+++ b/html/add_task.html
@@ -22,8 +22,10 @@
         </div>
         <section id="content">
             <div class="content-left">
-                <label for="input-title">Title<span class="span-star">*</span></label>
-                <input type="text" id="input-title" placeholder="Enter a Title">
+                <form onsubmit="return false">
+                    <label for="input-title">Title<span class="span-star">*</span></label>
+                    <input type="text" id="input-title" placeholder="Enter a Title" required>
+                </form>
                 <label for="input-description">Description</label>
                 <textarea name="input-description" id="input-description" placeholder="Enter a Description"></textarea>
                 <label for="input-assigny">Assigned to</label>
@@ -40,23 +42,25 @@
 
             <div class="seperator"></div>
 
-
             <div class="content-right">
-                <label for="input-date">Due Date<span class="span-star">*</span></label>
-                <input id="input-date" type="date" required>
+                <form onsubmit="return false">
+                    <label for="input-date">Due Date<span class="span-star">*</span></label>
+                    <input id="input-date" type="date" required>
+                </form>
                 <label for="input-prio">Prio</label>
                 <div class="input-prio-span">
-                    <div id="input-prio1" onclick="changePrioButtonUrgent()" class="urgent-image"></div>
-                    <div id="input-prio2" onclick="changePrioButtonMedium()" class="medium-image"></div>
-                    <div id="input-prio3" onclick="changePrioButtonLow()" class="low-image"></div>
+                    <div id="input-prio1" onclick="changePrioButtonUrgent()" class="urgent-image btn"></div>
+                    <div id="input-prio2" onclick="changePrioButtonMedium()" class="medium-image btn"></div>
+                    <div id="input-prio3" onclick="changePrioButtonLow()" class="low-image btn"></div>
                 </div>
-                <form action="#"></form>
-                <label for="input-category">Category<span class="span-star">*</span></label>
-                <input list="input-categorie" id="input-category" required>
-                <datalist id="input-categorie">
-                    <option value="Technical Task"></option>
-                    <option value="User Story"></option>
-                </datalist>
+                <form onsubmit="return false">
+                    <label for="input-category">Category<span class="span-star">*</span></label>
+                    <input list="input-categorie" id="input-category" required>
+                    <datalist id="input-categorie">
+                        <option value="Technical Task"></option>
+                        <option value="User Story"></option>
+                    </datalist>
+                </form>
                 <label for="input-subtask">Subtasks</label>
                 <div class="input-container">
                     <input type="text" id="input-subtask" placeholder="Add new subtask"><button class="add-button"
@@ -67,10 +71,10 @@
         </section>
         <div class="footer">
             <span>*This field is required</span>
-            <span>
-                <button class="btn-footer-clear" onclick="clearInputs()">Clear</button>
-                <button class="btn-footer-create" onclick="addTask()">Create Task</button>
-            </span>
+            <div class="button-footer">
+                <button class="btn-footer-clear btn" onclick="clearInputs()" id="btn-clear">Clear x</button>
+                <button class="btn-footer-create btn" onclick="addTask()">Create Task <img src="../assets/img/check.svg"></button>
+            </div>
         </div>
     </div>
     <div class="pop-up-task d-none" id="add_task">
