--- a/html/contacts.html
+++ b/html/contacts.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/contacts.css" />
     <link rel="stylesheet" href="../css/contactsFullscreen.css" />
     <link rel="stylesheet" href="../css/contactsEdit.css">
+    <link rel="stylesheet" href="../css/contacts_mediaqueries.css">
     <link rel="stylesheet" href="../fonts.css" />
   </head>
   <body onload="initializePage()">
