--- a/html/signup.html
+++ b/html/signup.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../css/signup.css" />
     <link rel="stylesheet" href="../fonts.css" />
+    <link rel="stylesheet" href="../css/signup_mediaqueries.css">
     <link
       rel="shortcut icon"
       href="../assets/img/favicon.ico"
