--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./fonts.css" />
+    <link rel="stylesheet" href="./css/index_mediaqueries.css">
     <link
       rel="shortcut icon"
       href="./assets/img/favicon.ico"
