--- a/html/add_task.html
+++ b/html/add_task.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../assets/templates/templates.css">
     <link rel="stylesheet" href="../css/add_task.css">
     <link rel="stylesheet" href="../fonts.css">
+    <link rel="stylesheet" href="../add_task_mediaqueries.css">
     <script src="../js/template.js"></script>
     <script src="../js/add_task.js"></script>
     <script src="../js/add_task_template.js"></script>
@@ -40,7 +41,7 @@
                 <div id="display-initials"></div>
             </div>
 
-            <div class="seperator"></div>
+            <div class="seperator" id="seperator-content"></div>
 
             <div class="content-right">
                 <form onsubmit="return false">
