animation media query

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body class="mainpage" onload="onloadFunc()">
-    <img id="animatedLogo" class="animate" src="./assets/img/logoLarge.svg" alt="Logo" />
+    <img id="animatedLogo" class="animate animateMobile" src="./assets/img/logoLarge.svg" alt="Logo" />
 
     <div class="hiddenMainpage" id="contentMainpage">
       <div class="mainpageSignUpContainer">
