media query contacts

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -251,6 +251,9 @@
             <img src="../assets/img/contact_add.svg" alt="Person" />
           </button>
         </div>
+        <button class="addContactIcon" onclick="openOverlay()">
+          <img src="../assets/img/contact_add.svg" alt="Person" />
+        </button>
         <div class="contactList" id="contactList"></div>
       </div>
 
