media query add contact overlay

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -34,6 +34,14 @@
               Task are better with a team!
             </h2>
           </div>
+          <div class="whiteCloseOverlay">
+            <img
+              src="../assets/img/closeButtonWhite.svg"
+              alt="Close"
+              class="closeButtonWhite"
+              id="closeAddOverlay"
+            />
+          </div>
         </div>
 
         <div class="rightOverlayContent">
