--- a/html/contacts.html
+++ b/html/contacts.html
@@ -21,7 +21,7 @@
 
     <div class="mainContainerContacts">
       <!-- Overlay Add Contact Start -->
-      <div class="addNewContactOverlay hidden" id="contactOverlay">
+      <div class="addNewContactOverlay hidden contactOverlaySmall" id="contactOverlay">
         <div class="leftOverlayContent">
           <div class="leftContainer">
             <img
