finished media query edit overlay

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -157,6 +157,14 @@
           />
           <h1 class="editOverlayHeadline">Edit contact</h1>
         </div>
+        <div class="whiteCloseEditOverlay">
+          <img
+            src="../assets/img/closeButtonWhite.svg"
+            alt="Close"
+            class="closeEditButtonWhite"
+            id="closeEditOverlay"
+          />
+        </div>
       </div>
 
       <div class="rightOverlayContent">
