close function small edit window

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -162,7 +162,7 @@
             src="../assets/img/closeButtonWhite.svg"
             alt="Close"
             class="closeEditButtonWhite"
-            id="closeEditOverlay"
+            id="whiteCloseEditOverlay"
           />
         </div>
       </div>
