--- a/html/contacts.html
+++ b/html/contacts.html
@@ -295,6 +295,7 @@
 
     <script src="../js/contacts.js"></script>
     <script src="../js/contacts_mediaqueries.js"></script>
+    <script src="../js/contacts_template.js"></script>
     <script src="../js/template.js"></script>
   </body>
 </html>
