added contact list

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -288,7 +288,7 @@
         <div class="dotIconContainer">
           <img id="dotIcon" src="../assets/img/dotIcon.svg" alt="Dot Icon" class="dotIcon" onclick="togglePopup(event)">
       </div>
-      <div id="popupOverlay" class="popupOverlay">
+      <div id="popupOverlay" class="popupOverlay hidden">
         <button class="popupEditContactButton" onclick="editContact()">
           <img class="editImg" src="../assets/img/edit.svg" alt="Edit" /> Edit
         </button>
